# adaptive-pinn

./: PINN-a.ipynb  README.md  pyproject.toml
experiment_results/experiment_1/: parameters.txt
experiment_results/experiment_2/: parameters.txt
experiment_results/experiment_3/: parameters.txt
slidev/: package-lock.json  package.json  slides.md
